@@ -18,6 +18,9 @@ version 1.1
 	  information will appear as "Not Applicable."  This includes
 	  skeleton classes, stub classes, interfaces, or anything not
 	  compiled with debug=true.
+	* Fix bug #1151777 with a patch from Jeremy Thomerson.
+	  Previously we were not escaping some characters correctly in the
+	  generated XML coverage report (specificially < and >).
 
 version 1.0
 	* Forked jcoverage 1.0.5 (although the version in the source says 1.0.4).
